--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -5,4 +5,6 @@ body {
     @import "media";
     @import "../pages/globals";
     @import "../pages/_home";
+    @import "../pages/_projects";
+    @import "../pages/_project-detail";
 }
