--- a/src/pug/connect.pug
+++ b/src/pug/connect.pug
@@ -2,7 +2,7 @@ extends includes/head.pug
 block head-page
     title Linked | Connect
     script(src="js/nav.min.js" defer)
-
+    //- script(src="js/animaciones-connect.min.js" defer)
 
 block content
     -ruta = ""
