--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -23,7 +23,7 @@ block content
                     img.img-fluid(src='img/layout6.jpg' alt)
                 .hero--wrap--hover
                     h3 SUSTAINABILITY
-                    a(href="project-detail.html") 
+                    a(href="project-home.html") 
                         .hero--wrap--hover--project
                             h6 PROJECT
                             h4.hero--wrap--hover--project--title.
@@ -39,7 +39,7 @@ block content
 
                                     Experimental
 
-                    a(href="project-detail.html")
+                    a(href="project-home.html")
                         .hero--wrap--hover--project
                             h6 PROJECT
                             h4.hero--wrap--hover--project--title.
@@ -59,7 +59,7 @@ block content
 
                                     Enviromental
 
-                    a(href="project-detail.html") 
+                    a(href="project-home.html") 
                         .hero--wrap--hover--project
                             h6 PROJECT
                             h4.hero--wrap--hover--project--title.
@@ -75,6 +75,8 @@ block content
 
                                     Personal
 
+                .btnHover
+
             ul.sidenav
                 a(href='projects.html')
                     li PROJECTS
@@ -89,7 +91,7 @@ block content
         section.projects-home
             .container-fluid
                 .row
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href='#!')
                             .projects-home__card.d-flex.tipo-uno(categoria='Typology')
                                 .projects-home__card__images
@@ -120,7 +122,7 @@ block content
 
                                     h4 Typology
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-dos(categoria='Contrast')
                                 .projects-home__card__images
@@ -151,7 +153,7 @@ block content
 
                                     h4 Contrast
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
                                 .projects-home__card__images
@@ -182,7 +184,7 @@ block content
 
                                     h4 Terrain
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-tres(categoria='Environment')
                                 .projects-home__card__images
@@ -213,7 +215,7 @@ block content
 
                                     h4 Environment
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-cuatro(categoria='Imagination')
                                 .projects-home__card__images
@@ -244,11 +246,11 @@ block content
 
                                     h4 Imagination
 
-                    .col-lg-4.col-6.projects-home__acceso.projects-home__acceso--writting
-                        a(href='#!')
-                            h3 WRITTING
+                    .col-lg-4.col-12.projects-home__acceso.projects-home__acceso--projects
+                        a(href='projects.html')
+                            h3 PROJECTS
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href='#!')
                             .projects-home__card.d-flex.tipo-uno(categoria='Typology')
                                 .projects-home__card__images
@@ -279,7 +281,7 @@ block content
 
                                     h4 Typology
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-dos(categoria='Contrast')
                                 .projects-home__card__images
@@ -310,7 +312,7 @@ block content
 
                                     h4 Contrast
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
                                 .projects-home__card__images
@@ -341,11 +343,11 @@ block content
 
                                     h4 Terrain
 
-                    .col-lg-4.col-6.projects-home__acceso.projects-home__acceso--teaching
-                        a(href='#!')
-                            h3 TEACHING
+                    .col-lg-4.col-12.projects-home__acceso.projects-home__acceso--about
+                        a(href='about.html')
+                            h3 ABOUT
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-tres(categoria='writing')
                                 .projects-home__card__images
@@ -376,7 +378,7 @@ block content
 
                                     h4 writing
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
                                 .projects-home__card__images
@@ -407,7 +409,7 @@ block content
 
                                     h4 Terrain
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href)
                             .projects-home__card.d-flex.tipo-tres(categoria='Environment')
                                 .projects-home__card__images
@@ -438,7 +440,7 @@ block content
 
                                     h4 Environment
 
-                    .col-lg-4.col-6
+                    .col-lg-4.col-12
                         a(href='#!')
                             .projects-home__card.d-flex.tipo-uno(categoria='Typology')
                                 .projects-home__card__images
@@ -469,8 +471,8 @@ block content
 
                                     h4 Typology
 
-                    .col-lg-4.col-6.projects-home__acceso.projects-home__acceso--about
-                        a(href='#!')
-                            h3 ABOUT
+                    .col-lg-4.col-12.projects-home__acceso.projects-home__acceso--connect
+                        a(href='connect.html')
+                            h3 CONNECT
 
 
