--- a/src/scss/core/_vars.scss
+++ b/src/scss/core/_vars.scss
@@ -10,6 +10,7 @@
     --gris-claro: #f0f0f0;
     --gris-medio: #e6e6e6;
     --gris-title: #d2d2d2;
+    --gris-title-mid: #b4b4b4;
     --gris: #8a8f9c;
     --gris-dark: #46505c;
     --dark: #151e2a;
@@ -24,10 +25,12 @@
 
     --txt-big: calc(84px + 100 * ((100vw - 1280px) / 1920)); //
     --h1: calc(64px + 78 * ((100vw - 1280px) / 1920)); //
+    --xl: calc(44px + 52 * ((100vw - 1280px) / 1920)); //
     --h1-1: calc(52px + 78 * ((100vw - 1280px) / 1920)); //
     --h2: calc(36px + 60 * ((100vw - 1280px) / 1920)); //
     --h3: calc(32px + 36 * ((100vw - 1280px) / 1920)); //
-    --h4: calc(24px + 10 * ((100vw - 1280px) / 1920));
+    --h4: calc(24px + 10 * ((100vw - 1280px) / 1920)); //
+    --l: calc(20px + 10 * ((100vw - 1280px) / 1920)); //
     --h5: calc(16px + 10 * ((100vw - 1280px) / 1920));
     --h6: calc(10px + 20 * ((100vw - 1280px) / 1920));
 
