--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -7,6 +7,7 @@ body {
     @import "../pages/globals";
     @import "../pages/_home";
     @import "../pages/_projects";
+    @import "../pages/_project-home";
     @import "../pages/_project-detail";
     @import "../pages/_writing";
     @import "../pages/_writing-detail";
