--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -44,7 +44,6 @@
                 font-size: var(--h3);
             }
         }
-
     }
 }
 
@@ -256,6 +255,52 @@
         }
     }
 
+    &.input-search {
+        flex-direction: column;
+
+        label {
+            font-size: var(--l);
+        }
+
+        .input-search--wrap {
+            display: flex;
+            align-items: center;
+            gap: 30px;
+
+            &.active {
+                // input:focus-visible {
+                //     outline-color: #fff;
+                // }
+
+                .btn-search {
+                    background-image: url(../../img/icon-search-pink.png);
+                }
+            }
+        }
+
+        input {
+            appearance: none;
+            color: var(--gris-title-mid);
+            background: none;
+            outline: none;
+            border: 1px solid #fff;
+            border-radius: 50px;
+            height: 70px;
+            font-size: var(--h4);
+            padding: 0 1em;
+            width: 100%;
+            text-transform: uppercase;
+
+            &::placeholder {
+                color: var(--gris-title-mid);
+            }
+        }
+
+        .btn-search {
+            background-image: url(../../img/icon-search-white.png);
+        }
+    }
+
     @media (max-width: 1024px) {
         label {
             top: calc(32px - 12 * ((100vw - 768px) / 1024));
@@ -272,10 +317,9 @@
         }
 
         input[type="text"] {
-
             &:focus,
             &:valid {
-                ~label {
+                ~ label {
                     top: -1.5em;
                 }
             }
