--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -201,6 +201,10 @@
                 }
             }
 
+            &--projects a {
+                background: var(--rosa);
+            }
+
             &--writting a {
                 background: var(--verde);
             }
@@ -212,10 +216,17 @@
             &--about a {
                 background: var(--azul-rey);
             }
+
+            &--connect a {
+                background: var(--verde-limon);
+                h3 {
+                    color: var(--gris-dark);
+                }
+            }
         }
 
         .col-lg-4 {
-            transition: .4s ease-in-out all;
+            transition: 0.4s ease-in-out all;
         }
 
         &__card {
@@ -310,7 +321,7 @@
 
                 transition: 0.3s ease-in-out all;
 
-                >h5 {
+                > h5 {
                     margin: 0;
                     color: #fff;
                     padding: 0.5em 0;
@@ -358,10 +369,48 @@
 
             &--wrap {
                 flex: auto;
-                height: auto;
+                height: 50vh;
+
+                .btnHover {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    position: absolute;
+                    bottom: 20px;
+                    background: var(--gris-dark);
+                    right: 20px;
+                    margin: auto;
+                    display: grid;
+                    place-items: center;
+                    color: #fff;
+                    font-size: xx-large;
+
+                    &::after {
+                        content: "+";
+                    }
+
+                    &.active {
+                        background: var(--gris);
+                        z-index: 1;
+
+                        &::after {
+                            content: "-";
+                        }
+                    }
+                }
+
+                &--hover {
+                    z-index: -1;
+                    padding-top: 50px;
+
+                    &.active {
+                        z-index: 1;
+                        opacity: 1;
+                    }
+                }
 
                 picture {
-                    height: calc(150px + 10 * ((100vw - 360px) / 768));
+                    height: calc(100% / 3);
 
                     &:nth-child(1) {
                         border-radius: 0 5px 5px 5px;
@@ -380,12 +429,12 @@
 
             .sidenav {
                 flex: auto;
-                height: auto;
+                height: 50vh;
                 margin-top: 2px;
                 margin-bottom: 0;
 
                 a {
-                    height: calc(150px + 10 * ((100vw - 360px) / 768));
+                    height: calc(100% / 3);
                     font-size: var(--h3);
                     padding: 0;
 
@@ -414,6 +463,7 @@
         }
 
         .projects-home {
+            padding: 3em 0;
             &__acceso {
                 margin-bottom: 1em;
                 height: calc(160px + 10 * ((100vw - 360px) / 768));
@@ -421,6 +471,7 @@
 
             &__card {
                 margin-bottom: 1em;
+                flex-direction: row !important;
 
                 &__images {
                     flex-basis: auto;
